--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,6 +40,7 @@ jobs:
 
       #gradle build
       - name: Grant execute permission for gradlew
+        cd : ./gradlew
         run: chmod +x gradlew
       - name: Build with Gradle
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
