--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/windows,java,intellij,macos
-# Edit at https://www.toptal.com/developers/gitignore?templates=windows,java,intellij,macos
+# Created by https://www.toptal.com/developers/gitignore/api/macos,intellij,java
+# Edit at https://www.toptal.com/developers/gitignore?templates=macos,intellij,java
 
 ### Intellij ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -173,30 +173,4 @@ Temporary Items
 # iCloud generated files
 *.icloud
 
-### Windows ###
-# Windows thumbnail cache files
-Thumbs.db
-Thumbs.db:encryptable
-ehthumbs.db
-ehthumbs_vista.db
-
-# Dump file
-*.stackdump
-
-# Folder config file
-[Dd]esktop.ini
-
-# Recycle Bin used on file shares
-$RECYCLE.BIN/
-
-# Windows Installer files
-*.cab
-*.msi
-*.msix
-*.msm
-*.msp
-
-# Windows shortcuts
-*.lnk
-
-# End of https://www.toptal.com/developers/gitignore/api/windows,java,intellij,macos
+# End of https://www.toptal.com/developers/gitignore/api/macos,intellij,java
