--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,7 +28,7 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: futureroi
-    url: jdbc:mysql://localhost:3306/futureroi?serverTimezone=UTC&characterEncoding=UTF-8
+    url: jdbc:mysql://43.201.62.68:3306/futureroi?serverTimezone=UTC&characterEncoding=UTF-8
     password: "futureroi123456"
   jpa:
     properties:
